[package]
name = "multilock"
version = "0.1.0"
authors = ["Nika Layzell <nika@thelayzells.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lock_api = "0.4"
smallvec = "1.4"

[dev-dependencies]
parking_lot = "0.11"

[patch.crates-io]
lock_api = { path = "../parking_lot/lock_api" }
